We have a working hexagon
Signed-off-by: OroArmor <eliorona@live.com>